--- a/index.html
+++ b/index.html
@@ -17,21 +17,43 @@
     <main>
         <div class="main__sun"></div>
         
-
         <div class="main__planetContainer">
             <div id="mercury" class="main__mercury"></div>
             <div id="venus" class="main__venus"></div>
             <div id="earth" class="main__earth"></div>
             <div id="mars" class="main__mars"></div>
             <div id="jupiter" class="main__jupiter"></div>
-            <div id="saturn" class="main__saturn"></div>
+            <div id="saturn" class="main__saturn"><div class="planetRing"></div></div>
             <div id="uranus" class="main__uranus"></div>
             <div id="neptune" class="main__neptune"></div>
         </div>
     </main>
 
-    <section>
-        <h2 id="planetName"></h2>
+    <section class="hide">
+        <div class="section__planet"></div>
+        <div class="section__container">
+            <h2 id="planetName" class="section__title">Jorden</h2>
+            <h3 id="PlanetOtherName" class="section__undertitle">Tellus</h3>
+            <p id="planetDescription" class="section__info">Jorden är den största och mest kompakta av de inre planeterna. Jorden är den enda av planeterna som konstaterats ha geologisk aktivitet och är även den enda planeten som med säkerhet härbärgerar liv. Dess flytande hydrosfär är unik bland stenplaneterna och jorden är också den enda planeten hos vilken plattektonik har observerats. Jordens atmosfär skiljer sig markant från de andra planeternas, vilket förklaras av att närvaron av levande organismer har förändrat atmosfären till att innehålla fritt syre, i dag motsvarande 21 procent.</p>
+            <div class="section__infoContainer">
+                <article>
+                    <h3>OMKRETS</h3>
+                    <p>40 075 km</p>
+                    <h3>MAX TEMPERATUR</h3>
+                    <p>60c</p>
+                </article>
+                <article>
+                    <h3>KM FRÅN SOLEN</h3>
+                    <p>149 600 000 km</p>
+                    <h3>MIN TEMPERATUR</h3>
+                    <p>-50c</p>
+                </article>
+            </div>
+
+            <h3 id="Moons" class="section__moontitles">MÅNAR</h3>
+            <p>Månen</p>
+
+        </div>
     </section>
 
     <script src="./script.js"></script>
