transitions on section done in JS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <div class="main__sun"></div>
+        <div id="sun" class="main__sun"></div>
         
         <div class="main__planetContainer">
             <div id="mercury" class="main__mercury"></div>
@@ -29,7 +29,7 @@
         </div>
     </main>
 
-    <section class="hide">
+    <section id="clickBack" class="hide">
         <div class="section__planet"></div>
         <div class="section__container">
             <h2 id="planetName" class="section__title">Jorden</h2>
@@ -50,9 +50,10 @@
                 </article>
             </div>
 
-            <h3 id="Moons" class="section__moontitles">MÅNAR</h3>
-            <p>Månen</p>
-
+            <div>
+                <h3 id="Moons" class="section__moontitles">MÅNAR</h3>
+                <p>Månen</p>
+            </div>
         </div>
     </section>
 
