made it clear how to get back to mainPage

--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
             <div class="section__moons">
                 <h3 class="section__moontitles">MÅNAR</h3>
                 <p id="moons"></p>
+                
             </div>
+            <p class="section__getBackToMainPage">Click anywhere to get back to mainpage</p>
         </div>
+    
     </section>
 
     <script src="./script.js"></script>
