--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <article class="main__titleBox">
-            <h1 class="main__title">Solsystemet</h1>
-            <h2 class="main__underTitle">Solaris</h2>
+            <h1 class="main__title">SOLSYSTEMET</h1>
+            <h2 class="main__underTitle">SOLARIS</h2>
         </article>
     </header>
 
@@ -57,7 +57,6 @@
             </div>
             <p class="section__getBackToMainPage">Click anywhere to get back to mainpage</p>
         </div>
-    
     </section>
 
     <script src="./script.js"></script>
